@@ -1,0 +1,48 @@
+#!/usr/bin/env python3
+
+# Test whether the pre-connect callback is triggered and allows us to set a username and password.
+
+# The client should connect to port 1888 with keepalive=60, clean session set,
+# client id 01-pre-connect, username set to uname and password set to ;'[08gn=#
+
+from mosq_test_helper import *
+
+port = mosq_test.get_lib_port()
+
+rc = 1
+keepalive = 60
+connect_packet = mosq_test.gen_connect("01-pre-connect", keepalive=keepalive, username="uname", password=";'[08gn=#")
+
+sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+sock.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)
+sock.settimeout(10)
+sock.bind(('', port))
+sock.listen(5)
+
+client_args = sys.argv[1:]
+env = dict(os.environ)
+env['LD_LIBRARY_PATH'] = '../../lib:../../lib/cpp'
+try:
+    pp = env['PYTHONPATH']
+except KeyError:
+    pp = ''
+env['PYTHONPATH'] = '../../lib/python:'+pp
+client = mosq_test.start_client(filename=sys.argv[1].replace('/', '-'), cmd=client_args, env=env, port=port)
+
+try:
+    (conn, address) = sock.accept()
+    conn.settimeout(10)
+
+    mosq_test.expect_packet(conn, "connect", connect_packet)
+    rc = 0
+
+    conn.close()
+except mosq_test.TestError:
+    pass
+finally:
+    client.terminate()
+    client.wait()
+    sock.close()
+
+exit(rc)
+
