@@ -11,6 +11,8 @@ Client library:
   feature that allows the network thread to be woken from select() by another
   thread when e.g.  mosquitto_publish() is called. This reduces the number of
   sockets used by each client by two.
+- Add `on_pre_connect()` callback to allow clients to update
+  username/password/TLS parameters before an automatic reconnection.
 
 
 2.0.6 - 2021-01-xx
